[package]
name = "citytool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cjval = { path = "/home/hannes/src/cjval" } # "0.5.0"
indexmap = { version = "1.9.2", features = ["serde-1"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
quick-xml = "0.27.1"
rust_decimal = { version = "1.28.0", features = ["serde-float"] }
rust_decimal_macros = "1.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
